2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_sc_lpe.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_sc_lpe.c: Conditionalize use of thread on CYGPKG_KERNEL
	not CYGPKG_NET.

2002-04-12  Gary Thomas  <gthomas@redhat.com>

	* src/if_sc_lpe.c: Clean up warnings.

2001-10-16  Jesper Skov  <jskov@redhat.com>

	* include/devs_eth_cf.inl: Added buffer parameters.

2001-08-25  Gary Thomas  <gthomas@redhat.com>

	* src/if_sc_lpe.c (sc_lpe_card_handler): Rework ESA discovery code.

2001-08-22  Gary Thomas  <gthomas@redhat.com>

	* src/if_sc_lpe.c: 
	printf() is no longer a part of RedBoot.  Thus all programs
	must use diag_printf() and related functions instead.

2001-06-16  Jesper Skov  <jskov@redhat.com>

	* src/if_sc_lpe.c: Use generic DP83902A driver, only redefining
	the init function to handle card details (which incidently do not
	appear to be fully working).

	* include/devs_eth_cf.inl: Device details moved here so the
	generic driver can access them.

	* cdl/cf_eth_drivers.cdl: Changes to use generic driver. Allow ESA
	to be configured.
	Require DP83902A package.

	* src/dp8390.h: Deleted.

2001-04-13  Gary Thomas  <gthomas@redhat.com>

	* src/if_sc_lpe.c (sc_lpe_card_handler): Work around broken card(s)
	which do not have valid ESA in config EPROM.

2000-09-15  Gary Thomas  <gthomas@redhat.com>

	* src/if_sc_lpe.c: Suppress noisy message which seems to sometimes
	happen if the card is re-initialized from warm.

2000-09-14  Gary Thomas  <gthomas@redhat.com>

	* src/if_sc_lpe.c: Better recovery for bad devices [stand-alone].

2000-09-13  Gary Thomas  <gthomas@redhat.com>

	* src/if_sc_lpe.c: Fix handling of receive buffer overflow,
	i.e. missed data.  [quietly ignored]

	* src/dp8390.h: Update layout of Tx/Rx buffers.

2000-09-12  Gary Thomas  <gthomas@redhat.com>
